Mongo srv + Product model & repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-
+spring.data.mongodb.uri=mongodb+srv://rindrarolando:admin@ms-product.x33ffio.mongodb.net/ms-product?retryWrites=true&w=majority&appName=ms-product
