ProductController & Implementation of Eureka Client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.data.mongodb.uri=mongodb+srv://rindrarolando:admin@ms-product.x33ffio.mongodb.net/ms-product?retryWrites=true&w=majority&appName=ms-product
+spring.application.name=product-service
+
+server.port=0
+
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
